use DI whereever it can be used